# app-types

./: .pre-commit-config.yaml  Dockerfile  MANIFEST.in  Makefile  pyproject.toml  requirements-dev.txt  requirements.in  setup.cfg
.github/workflows/: ci.yaml  test.yaml
charts/hook/: Chart.yaml  values.yaml
charts/hook/templates/: _helpers.tpl  cleanup-network-policy.yaml  cleanup-script-configmap.yaml  network-policy.yaml  post-delete.yaml  post-install.yaml  role.yaml  rolebinding.yaml  serviceaccount.yaml
fixtures/apolo_app_types_fixtures/: apolo_clients.py  constants.py
src/apolo_app_types/: __init__.py  apolo_deploy.py  app_types.py  cli.py  common.py  dify.py  fooocus.py  job_utils.py  jupyter.py  llm.py  mlflow.py  postgres.py  private_gpt.py  pycharm.py  shell.py  stable_diffusion.py  text_embeddings.py  vscode.py  weaviate.py
src/apolo_app_types/clients/: apps_api.py  kube.py
src/apolo_app_types/common/: __init__.py  auth.py  hugging_face.py  ingress.py  inputs.py  networking.py  outputs.py  postgres.py  preset.py  redis.py  storage.py
src/apolo_app_types/dynamic_outputs/: filters.py
src/apolo_app_types/inputs/: args.py
src/apolo_app_types/outputs/: base.py  common.py  custom_deployment.py  dify.py  dockerhub.py  fooocus.py  huggingface_cache.py  huggingface_storage_cache.py  jupyter.py  launchpad.py  lightrag.py  llm.py  mlflow.py  openwebui.py  postgres.py  privategpt.py  shell.py  stable_diffusion.py  superset.py  tei.py  update_outputs.py  vscode.py  weaviate.py
src/apolo_app_types/protocols/: apolo_deploy.py  bucket.py  buckets.py  custom_app.py  custom_deployment.py  dify.py  dockerhub.py  fooocus.py  github.py  hugging_face.py  huggingface_storage_cache.py  job.py  jupyter.py  launchpad.py  lightrag.py  llm.py  mlflow.py  openwebui.py  postgres.py  private_gpt.py  pycharm.py  resp_api.py  shell.py  spark_job.py  stable_diffusion.py  superset.py  text_embeddings.py  vscode.py  weaviate.py
src/apolo_app_types/schema/: schema_dumper.py
src/apolo_app_types/utils/: auth_validator.py  kube.py
tests/unit/: conftest.py  constants.py  test_common.py  test_custom_deployment_input_generation.py  test_custom_deployment_outputs_generation.py  test_custom_validators.py  test_dockerhub_input_generation.py  test_dockerhub_outputs_generation.py  test_fooocus_input_generation.py  test_fooocus_outputs_generation.py  test_job_utils.py  test_jupyter_input_generation.py  test_llm_input_generation.py  test_llm_outputs_generation.py  test_mlflow_input_generation.py  test_mlflow_outputs_generation.py  test_outputs_generation.py  test_postgres_input_generator.py  test_postgres_outputs_generator.py  test_privategpt_input_generation.py  test_schema_extra.py  test_schema_utils.py  test_sd_input_generation.py  test_sd_outputs_generation.py  test_spark_job_input_generation.py  test_spark_job_outputs_generation.py  test_tei_input_generation.py  test_tei_outputs_generation.py  test_values_generation.py  test_vscode_input_generation.py  test_weaviate_input_generation.py  test_weaviate_outputs_generation.py
tests/unit/buckets/: test_buckets_input_generation.py
tests/unit/bundles/: test_deepseek_input_generation.py  test_gptoss_input_generation.py  test_gpu_autoselection.py  test_llama4_input_generation.py  test_mistral_input_generation.py
tests/unit/custom_deployment/: test_custom_deployment_imagepullsecret.py  test_custom_deployment_input_generation.py  test_custom_deployment_outputs_generation.py
tests/unit/dify/: test_dify_input_generation.py  test_dify_outputs_generation.py
tests/unit/dockerhub/: test_dockerhub_input_generation.py  test_dockerhub_outputs_generation.py
tests/unit/fooocus/: test_fooocus_input_generation.py  test_fooocus_outputs_generation.py
tests/unit/github/: test_github_app.py
tests/unit/job_app/: test_job_integrations.py  test_job_utils.py
tests/unit/jupyter/: test_jupyter_input_generation.py
tests/unit/launchpad/: test_launchpad_input_generation.py  test_launchpad_output_generation.py
tests/unit/lightrag/: __init__.py  test_lightrag_input_generation.py  test_lightrag_outputs_generation.py
tests/unit/llm/: test_llm_input_generation.py  test_llm_outputs_generation.py
tests/unit/mlflow/: test_mlflow_input_generation.py  test_mlflow_outputs_generation.py
tests/unit/openwebui/: test_openwebui_input_generation.py
tests/unit/postgres/: test_postgres_input_generator.py  test_postgres_outputs_generator.py
tests/unit/privategpt/: test_privategpt_input_generation.py
tests/unit/protocols/: test_abc.py  test_k8s.py  test_resp_api.py
tests/unit/shell/: test_shell_input_generation.py  (+1 more)
(+83 files in other folders)
